--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Volcanic Archive</title>
-  </head>
-  <body>
-    <div id="root" class="w-screen h-screen"></div>
+</head>
+
+<body class="h-screen w-screen bg-vol-crust text-vol-champ">
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-  </body>
+</body>
+
 </html>
