--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Volcanic Archive</title>
+    <title>VolcanoDB</title>
 </head>
 
 <body class="h-screen w-screen bg-vol-crust text-vol-champ">
