impl a whole load of sorting stuff

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>VolcanoDB</title>
 </head>
 
-<body class="h-screen w-screen bg-vol-crust text-vol-champ">
+<body class="h-full w-full bg-vol-crust text-vol-champ">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
