--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body class="h-full w-full bg-vol-crust text-vol-champ">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 
 </html>
